# sigrock-over-net-viewer

./: .gitignore  CMakeLists.txt  README.md
assets/: sonview.desktop
client/: CMakeLists.txt  imconfig.h
client/src/: app.cpp  app.h  chunked.h  export.cpp  gui.cpp  icon_data.h  main.cpp  model.cpp  model.h  net.cpp  net.h  pyramid.h  render.cpp  selftest.cpp  stores.cpp  stores.h  unittest.cpp  zstd_util.h
cmake/: aarch64-pi-toolchain.cmake
decoders/i2s_ex/: __init__.py  pd.py
docs/: ARCHITECTURE.md  UX-AUDIT.md
proto/: PROTOCOL.md  son_protocol.h  son_wire.h
scripts/: deploy-decoders.sh  deploy-run.sh  gen-icon.sh  make-sysroot.sh  xbuild.sh
server/: CMakeLists.txt
server/src/: capture.cpp  main.cpp  server.h
tools/: gen_i2s.py  son_probe.py
